Primeros cambios personalizados a VAROX

--- a/SISTEMA.DATOS/SISTEMA.DATOS.vbproj
+++ b/SISTEMA.DATOS/SISTEMA.DATOS.vbproj
@@ -64,8 +64,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConexionesBD\ConexionBD_BioSoft.vb" />
-    <Compile Include="ConexionesBD\ConexionBD_BioTime.vb" />
+    <Compile Include="ConexionesBD\ConexionBD_Externa.vb" />
+    <Compile Include="ConexionesBD\ConexionBD_Local.vb" />
     <Compile Include="ConexionesBD\GlobalesConexiones.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -82,6 +82,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="PRINCIPAL\DLogin.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
