--- a/SISTEMA.ENTIDADES/SISTEMA.ENTIDADES.vbproj
+++ b/SISTEMA.ENTIDADES/SISTEMA.ENTIDADES.vbproj
@@ -79,6 +79,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="PRINCIPAL\Login.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
