--- a/config.ini
+++ b/config.ini
@@ -7,13 +7,15 @@ Correo=soporte@compañia.co.cr
 //Separar compañias por comas//
 
 [LOCAL]
-Servidor=192.168.0.1
-BD=ND
-Usuario=ND
-Clave=ND
+Servidor=192.168.100.2
+BD=VAROX
+Usuario=varox
+Clave=ConsultorOX2023*/
+Activo=SI
 
 [EXTERNO]
 Servidor=192.168.1.1
 BD=ND
 Usuario=ND
 Clave=ND
+Activo=NO
