--- a/SISTEMA.PRESENTACION/SISTEMA.PRESENTACION.vbproj
+++ b/SISTEMA.PRESENTACION/SISTEMA.PRESENTACION.vbproj
@@ -45,12 +45,15 @@
     <Reference Include="DevExpress.BonusSkins.v22.2" />
     <Reference Include="DevExpress.Charts.v22.2.Core, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.CodeParser.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Dashboard.v22.2.Core, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Dashboard.v22.2.Win, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Data.v22.2" />
     <Reference Include="DevExpress.Data.Desktop.v22.2" />
     <Reference Include="DevExpress.DataAccess.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.DataAccess.v22.2.UI, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Diagram.v22.2.Core, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Images.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Map.v22.2.Core, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Office.v22.2.Core, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Pdf.v22.2.Core, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Pdf.v22.2.Drawing, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
@@ -58,6 +61,7 @@
     <Reference Include="DevExpress.Printing.v22.2.Core" />
     <Reference Include="DevExpress.RichEdit.v22.2.Core, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.RichEdit.v22.2.Export, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.TreeMap.v22.2.Core, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Utils.v22.2" />
     <Reference Include="DevExpress.Utils.v22.2.UI, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Xpo.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
@@ -65,13 +69,17 @@
     <Reference Include="DevExpress.Sparkline.v22.2.Core" />
     <Reference Include="DevExpress.XtraCharts.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraCharts.v22.2.Extensions, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraCharts.v22.2.UI, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraCharts.v22.2.Wizard, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraDiagram.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraEditors.v22.2" />
     <Reference Include="DevExpress.Drawing.v22.2" />
     <Reference Include="DevExpress.XtraGauges.v22.2.Core, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraGauges.v22.2.Presets, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraGauges.v22.2.Win, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraGrid.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraLayout.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraMap.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraNavBar.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraPivotGrid.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraPrinting.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
@@ -80,7 +88,10 @@
     <Reference Include="DevExpress.XtraReports.v22.2.Extensions, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraRichEdit.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraTreeList.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraTreeMap.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraTreeMap.v22.2.UI, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraVerticalGrid.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -90,6 +101,7 @@
     <Reference Include="System.Data.OracleClient" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing.Design" />
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
@@ -100,6 +112,8 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationClient" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
@@ -113,10 +127,52 @@
     <Import Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dashboard\frmDashboardGeneral.Designer.vb">
-      <DependentUpon>frmDashboardGeneral.vb</DependentUpon>
+    <Compile Include="Admin_Sistema\frmClasesDispositivos.Designer.vb">
+      <DependentUpon>frmClasesDispositivos.vb</DependentUpon>
     </Compile>
-    <Compile Include="Dashboard\frmDashboardGeneral.vb">
+    <Compile Include="Admin_Sistema\frmClasesDispositivos.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin_Sistema\frmRoles.Designer.vb">
+      <DependentUpon>frmRoles.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Admin_Sistema\frmRoles.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin_Sistema\frmTiposMediciones.Designer.vb">
+      <DependentUpon>frmTiposMediciones.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Admin_Sistema\frmTiposMediciones.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin_Sistema\frmTiposValvulas.Designer.vb">
+      <DependentUpon>frmTiposValvulas.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Admin_Sistema\frmTiposValvulas.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gestión_General\frmClientes.Designer.vb">
+      <DependentUpon>frmClientes.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Gestión_General\frmClientes.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gestión_General\frmLocales.Designer.vb">
+      <DependentUpon>frmLocales.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Gestión_General\frmLocales.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gestión_General\frmValvulas.Designer.vb">
+      <DependentUpon>frmValvulas.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Gestión_General\frmValvulas.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dashboard\frmDashboardDesigner.Designer.vb">
+      <DependentUpon>frmDashboardDesigner.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Dashboard\frmDashboardDesigner.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Admin_Sistema\frmConfigClaveBloq.Designer.vb">
@@ -135,6 +191,12 @@
       <DependentUpon>frmDashboardRapido.vb</DependentUpon>
     </Compile>
     <Compile Include="Dashboard\frmDashboardRapido.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gestión_General\frmValv_Loc_Cli.Designer.vb">
+      <DependentUpon>frmValv_Loc_Cli.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Gestión_General\frmValv_Loc_Cli.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ModuleGlobales.vb" />
@@ -162,12 +224,6 @@
     <Compile Include="Principal\SplashScreen.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Principal\Dashboard.Designer.vb">
-      <DependentUpon>Dashboard.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Principal\Dashboard.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="Reportería\frmCorteGeneral.Designer.vb">
       <DependentUpon>frmCorteGeneral.vb</DependentUpon>
     </Compile>
@@ -180,8 +236,29 @@
     <Compile Include="Reportería\frmCortePorLocal.vb">
       <SubType>Form</SubType>
     </Compile>
-    <EmbeddedResource Include="Dashboard\frmDashboardGeneral.resx">
-      <DependentUpon>frmDashboardGeneral.vb</DependentUpon>
+    <EmbeddedResource Include="Admin_Sistema\frmClasesDispositivos.resx">
+      <DependentUpon>frmClasesDispositivos.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin_Sistema\frmRoles.resx">
+      <DependentUpon>frmRoles.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin_Sistema\frmTiposMediciones.resx">
+      <DependentUpon>frmTiposMediciones.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin_Sistema\frmTiposValvulas.resx">
+      <DependentUpon>frmTiposValvulas.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gestión_General\frmClientes.resx">
+      <DependentUpon>frmClientes.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gestión_General\frmLocales.resx">
+      <DependentUpon>frmLocales.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gestión_General\frmValvulas.resx">
+      <DependentUpon>frmValvulas.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dashboard\frmDashboardDesigner.resx">
+      <DependentUpon>frmDashboardDesigner.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Admin_Sistema\frmConfigClaveBloq.resx">
       <DependentUpon>frmConfigClaveBloq.vb</DependentUpon>
@@ -191,6 +268,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Dashboard\frmDashboardRapido.resx">
       <DependentUpon>frmDashboardRapido.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gestión_General\frmValv_Loc_Cli.resx">
+      <DependentUpon>frmValv_Loc_Cli.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\licenses.licx" />
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -211,9 +291,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Principal\SplashScreen.resx">
       <DependentUpon>SplashScreen.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Principal\Dashboard.resx">
-      <DependentUpon>Dashboard.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportería\frmCorteGeneral.resx">
       <DependentUpon>frmCorteGeneral.vb</DependentUpon>
