Aplicacion de GRUD TiposMed y TiposValv, validaciones de formularios. Interfaces: -TiposMed: 100% -TiposValv: 80% (Aplicar formatos y paleta de colores)

--- a/SISTEMA.DATOS/SISTEMA.DATOS.vbproj
+++ b/SISTEMA.DATOS/SISTEMA.DATOS.vbproj
@@ -71,6 +71,8 @@
     <Compile Include="ConexionesBD\ConexionBD_Externa.vb" />
     <Compile Include="ConexionesBD\ConexionBD_Local.vb" />
     <Compile Include="ConexionesBD\GlobalesConexiones.vb" />
+    <Compile Include="Gestión_General\DClientes.vb" />
+    <Compile Include="Gestión_General\DLocales.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
