--- a/SISTEMA.ENTIDADES/SISTEMA.ENTIDADES.vbproj
+++ b/SISTEMA.ENTIDADES/SISTEMA.ENTIDADES.vbproj
@@ -68,6 +68,7 @@
     <Compile Include="Admin_Sistema\TipoMed_TiposValv.vb" />
     <Compile Include="Admin_Sistema\Usuarios.vb" />
     <Compile Include="Gestión_General\Clientes.vb" />
+    <Compile Include="Gestión_General\Locales.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
