--- a/SISTEMA.NEGOCIO/SISTEMA.NEGOCIO.vbproj
+++ b/SISTEMA.NEGOCIO/SISTEMA.NEGOCIO.vbproj
@@ -44,6 +44,9 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.CodeParser.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.DataAccess.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Xpo.v22.2, Version=22.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -70,6 +73,9 @@
     <Compile Include="Admin_Sistema\NUsuarios.vb" />
     <Compile Include="Gestión_General\NClientes.vb" />
     <Compile Include="Gestión_General\NLocales.vb" />
+    <Compile Include="Gestión_General\NReportes.vb" />
+    <Compile Include="Gestión_General\NValvulas.vb" />
+    <Compile Include="Gestión_General\NVinculacion.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
