--- a/SISTEMA.PRESENTACION/app.config
+++ b/SISTEMA.PRESENTACION/app.config
@@ -1,10 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
       <section name="DevExpress.LookAndFeel.Design.AppSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
+  <connectionStrings>
+    <add name="VAROXConnectionString" connectionString="XpoProvider=MSSqlServer;data source=10.0.5.35;user id=sa;password=$@QU@F00D5$*;initial catalog=VAROX;Persist Security Info=true" />
+  </connectionStrings>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
       <setting name="DPIAwarenessMode" serializeAs="String">
@@ -14,7 +17,7 @@
         <value>True</value>
       </setting>
       <setting name="DefaultAppSkin" serializeAs="String">
-        <value>Skin/Blue</value>
+        <value></value>
       </setting>
       <setting name="DefaultPalette" serializeAs="String">
         <value></value>
