Se implementaron privilegios en todos los módulos

--- a/config.ini
+++ b/config.ini
@@ -1,21 +1,29 @@
 //CONFIGURACION DEL SISTEMA//
 
+[SESION]
+Usuario=ADMINISTRADOR
+Compañia=LOCAL
+
 [GENERAL]
-Company=LOCAL
 Correo=soporte@compañia.co.cr
 
+[PERSONALIZACION]
+Tema=Coffee
+
 //Separar compañias por comas//
+[PARAMETROS]
+Compañias=LOCAL
 
 [LOCAL]
-Servidor=192.168.100.2
+Servidor=10.0.5.35
 BD=VAROX
-Usuario=varox
-Clave=ConsultorOX2023*/
+Usuario=sa
+Clave=$@QU@F00D5$*
 Activo=SI
 
 [EXTERNO]
-Servidor=192.168.1.1
-BD=ND
-Usuario=ND
-Clave=ND
-Activo=NO
+Servidor=10.0.5.35
+BD=master
+Usuario=sa
+Clave=$@QU@F00D5$*
+Activo=SI
