--- a/SISTEMA.PRESENTACION/app.config
+++ b/SISTEMA.PRESENTACION/app.config
@@ -7,8 +7,7 @@
   </configSections>
   <connectionStrings>
     <add name="VAROXConnectionString" connectionString="XpoProvider=MSSqlServer;data source=10.0.5.35;user id=sa;password=$@QU@F00D5$*;initial catalog=VAROX;Persist Security Info=true" />
-    <add name="Varox.MySettings.VAROXConnectionString" connectionString="Data Source=10.0.5.35;Initial Catalog=VAROX;Persist Security Info=True;User ID=sa;Password=$@QU@F00D5$*"
-      providerName="System.Data.SqlClient" />
+    <add name="Varox.MySettings.VAROXConnectionString" connectionString="Data Source=10.0.5.35;Initial Catalog=VAROX;Persist Security Info=True;User ID=sa;Password=$@QU@F00D5$*" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
@@ -19,7 +18,7 @@
         <value>True</value>
       </setting>
       <setting name="DefaultAppSkin" serializeAs="String">
-        <value></value>
+        <value>Skin/Sharp</value>
       </setting>
       <setting name="DefaultPalette" serializeAs="String">
         <value></value>
