Ajuste de Moneda en Tipo de Mediciones, Reportes

--- a/SISTEMA.PRESENTACION/My Project/Settings.settings
+++ b/SISTEMA.PRESENTACION/My Project/Settings.settings
@@ -1,14 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="" GeneratedClassName="MySettings" UseMySettingsClassName="true">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" UseMySettingsClassName="true">
   <Profiles />
-  <Settings>
-    <Setting Name="VAROXConnectionString" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
-  &lt;ConnectionString&gt;Data Source=10.0.5.35;Initial Catalog=VAROX;Persist Security Info=True;User ID=sa;Password=$@QU@F00D5$*&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=10.0.5.35;Initial Catalog=VAROX;Persist Security Info=True;User ID=sa;Password=$@QU@F00D5$*</Value>
-    </Setting>
-  </Settings>
+  <Settings />
 </SettingsFile>
