--- a/config.ini
+++ b/config.ini
@@ -2,17 +2,18 @@
 
 [SESION]
 Usuario=ADMINISTRADOR
-Compañia=LOCAL
+Company=LOCAL
 
 [GENERAL]
 Correo=soporte@compañia.co.cr
+Company=LOCAL
 
 [PERSONALIZACION]
-Tema=Coffee
+Tema=Sharp
 
 //Separar compañias por comas//
 [PARAMETROS]
-Compañias=LOCAL
+Companies=LOCAL
 
 [LOCAL]
 Servidor=10.0.5.35
