Campos Adicionales de Informacion en Modulo Clien_Loc_Valv, datos de Tipo de Medicion (Se modifico procedimiento almacenado GG_consultarDetalleValvula)

--- a/SISTEMA.PRESENTACION/SISTEMA.PRESENTACION.vbproj
+++ b/SISTEMA.PRESENTACION/SISTEMA.PRESENTACION.vbproj
@@ -401,6 +401,7 @@
   <ItemGroup>
     <Content Include="IconoVarox.ico" />
     <Content Include="Reportería\Dashboard.xml" />
+    <None Include="Resources\EntradaMall.jpg" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
